--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     <c-row>
       <c-col sm="5">
         <h4 class="card-title mb-0" id="traffic">Ramassage</h4>
-        <div class="small text-medium-emphasis">January - Octobre 2023</div>
+        <div class="small text-medium-emphasis">Janvier - Octobre 2023</div>
       </c-col>
       <c-col class="d-none d-md-block" sm="7">
         <button cButton class="float-end" color="primary">
@@ -14,15 +14,15 @@
           <c-button-group class="float-end me-3" role="group">
             <input class="btn-check" formControlName="trafficRadio" type="radio" value="Day" />
             <label (click)="setTrafficPeriod('Day')" cButton cFormCheckLabel color="secondary"
-              variant="outline">Day</label>
+              variant="outline">Jour</label>
 
             <input class="btn-check" formControlName="trafficRadio" type="radio" value="Month" />
             <label (click)="setTrafficPeriod('Month')" cButton cFormCheckLabel color="secondary"
-              variant="outline">Month</label>
+              variant="outline">Mois</label>
 
             <input class="btn-check" formControlName="trafficRadio" type="radio" value="Year" />
             <label (click)="setTrafficPeriod('Year')" cButton cFormCheckLabel color="secondary"
-              variant="outline">Year</label>
+              variant="outline">Année</label>
           </c-button-group>
         </form>
       </c-col>
@@ -85,7 +85,7 @@
 
             <div class="progress-group mb-4">
               <div class="progress-group-prepend">
-                <span class="text-medium-emphasis small">Monday</span>
+                <span class="text-medium-emphasis small">Lundi</span>
               </div>
               <div class="progress-group-bars">
                 <c-progress thin>
@@ -98,7 +98,7 @@
             </div>
             <div class="progress-group mb-4">
               <div class="progress-group-prepend">
-                <span class="text-medium-emphasis small">Tuesday</span>
+                <span class="text-medium-emphasis small">Mardi</span>
               </div>
               <div class="progress-group-bars">
                 <c-progress thin>
@@ -112,7 +112,7 @@
             </div>
             <div class="progress-group mb-4">
               <div class="progress-group-prepend">
-                <span class="text-medium-emphasis small">Wednesday</span>
+                <span class="text-medium-emphasis small">Mercredi</span>
               </div>
               <div class="progress-group-bars">
                 <c-progress thin>
@@ -126,7 +126,7 @@
             </div>
             <div class="progress-group mb-4">
               <div class="progress-group-prepend">
-                <span class="text-medium-emphasis small">Thursday</span>
+                <span class="text-medium-emphasis small">Jeudi</span>
               </div>
               <div class="progress-group-bars">
                 <c-progress thin>
@@ -140,7 +140,7 @@
             </div>
             <div class="progress-group mb-4">
               <div class="progress-group-prepend">
-                <span class="text-medium-emphasis small">Friday</span>
+                <span class="text-medium-emphasis small">Vendredi</span>
               </div>
               <div class="progress-group-bars">
                 <c-progress thin>
@@ -154,7 +154,7 @@
             </div>
             <div class="progress-group mb-4">
               <div class="progress-group-prepend">
-                <span class="text-medium-emphasis small">Saturday</span>
+                <span class="text-medium-emphasis small">Samedi</span>
               </div>
               <div class="progress-group-bars">
                 <c-progress thin>
@@ -168,7 +168,7 @@
             </div>
             <div class="progress-group mb-4">
               <div class="progress-group-prepend">
-                <span class="text-medium-emphasis small">Sunday</span>
+                <span class="text-medium-emphasis small">Dimanche</span>
               </div>
               <div class="progress-group-bars">
                 <c-progress thin>
