Fix spelling wording

--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -19,7 +19,7 @@
         </a>
       </c-nav-item>
       <c-nav-item>
-        <a cNavLink routerLink="/theme/colors" routerLinkActive="active">Leaderboard</a>
+        <a cNavLink routerLink="/theme/colors" routerLinkActive="active">Classement</a>
       </c-nav-item>
       <c-nav-item>
         <a cNavLink routerLink="/theme/typography" routerLinkActive="active">
