--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,13 +1,8 @@
 <!--sidebar-->
 <c-sidebar #sidebar="cSidebar" class="d-print-none sidebar sidebar-fixed" id="sidebar" visible>
   <c-sidebar-brand [brandFull]="{
-      src: 'assets/img/brand/coreui-angular.svg',
+      src: 'assets/img/brand/brand.png',
       width: 200,
-      height: 46,
-      alt: 'CoreUI Logo'
-    }" [brandNarrow]="{
-      src: 'assets/img/brand/coreui-signet-white.svg',
-      width: 46,
       height: 46,
       alt: 'CoreUI Logo'
     }" routerLink="./" />
