--- a/src/app/views/theme/colors.component.html
+++ b/src/app/views/theme/colors.component.html
@@ -1,9 +1,9 @@
 <c-row>
   <c-card class="mb-4">
     <c-row>
-      <c-col xs>
+      <c-col xs class="mt-3">
         <c-card class="mb-4">
-          <c-card-header>Users</c-card-header>
+          <c-card-header>Classement</c-card-header>
           <c-card-body>
             <table [hover]="true" [responsive]="true" [striped]="true" align="middle" cTable class="mb-0 border">
               <thead cTableColor="light">
@@ -11,10 +11,10 @@
                   <th class="text-center">
                     <svg cIcon name="cilPeople"></svg>
                   </th>
-                  <th>User</th>
-                  <th class="text-center">Country</th>
-                  <th>Usage</th>
-                  <th>Activity</th>
+                  <th>Utilisateurs</th>
+                  <th class="text-center">Pays</th>
+                  <th>Objectifs</th>
+                  <th>Activités</th>
                 </tr>
               </thead>
               <tbody>
@@ -26,7 +26,7 @@
                     <div>{{ user.name }}</div>
                     <div class="small text-medium-emphasis text-nowrap">
                       <span>
-                        {{ user.state }} | Registered: {{ user.registered }}
+                        {{ user.state }} | Inscrit le : {{ user.registered }}
                       </span>
                     </div>
                   </td>
@@ -50,7 +50,7 @@
                     </c-progress>
                   </td>
                   <td>
-                    <div class="small text-medium-emphasis">Last login</div>
+                    <div class="small text-medium-emphasis">Dernière connexion</div>
                     <div class="fw-semibold text-nowrap">{{ user.activity }}</div>
                   </td>
                 </tr>
