--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -6,8 +6,8 @@
           <c-card class="p-4">
             <c-card-body>
               <form cForm>
-                <h1>Login</h1>
-                <p class="text-medium-emphasis">Sign In to your account</p>
+                <h1>Connexion</h1>
+                <p class="text-medium-emphasis">Connexion à votre compte</p>
                 <c-input-group class="mb-3">
                   <span cInputGroupText>
                     <svg cIcon name="cilUser"></svg>
@@ -28,12 +28,12 @@
                 <c-row>
                   <c-col xs="6">
                     <button cButton class="px-4" color="primary" routerLink="/dashboard">
-                      Login
+                      Connexion
                     </button>
                   </c-col>
                   <c-col class="text-right" xs="6">
                     <button cButton class="px-0" color="link">
-                      Forgot password?
+                      Mot de passe oublié ?
                     </button>
                   </c-col>
                 </c-row>
@@ -43,13 +43,13 @@
           <c-card [ngStyle]="{'width.%': 44}" class="text-white bg-primary py-5">
             <c-card-body class="text-center">
               <div>
-                <h2>Sign up</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.
-                </p>
+                <h2>Connexion</h2> 
+                <img src="assets/img/brand/qrcode.png" alt="logo" [ngStyle]="{'width.%': 44, 'height.%': 44}" />
+                <p>Scannez le QR code pour vous connecter</p>
+                <br/>
+                <h2>Enregistrez-vous</h2>  
                 <button [active]="true" cButton class="mt-3" color="primary" routerLink="/register">
-                  Register Now!
+                  S'inscire !
                 </button>
               </div>
             </c-card-body>
